# API-de-Tarefas

./: .env  DIAGRAMS.md  Makefile  README.md  pyproject.toml
store/: main.py
store/controllers/: tarefas.py
store/core/: exceptions.py
store/db/: mongo.py
store/models/: base.py  tarefas.py
store/schemas/: base.py  tarefas.py
store/usecases/: tarefas.py
tests/: conftest.py
tests/controllers/: test_tarefas.py  test_tarefas.py.original.bak  test_tarefas.py.tests.bak
tests/schemas/: test_tarefas.py
