[project]
name = "api_tarefas"
version = "0.0.1"
description = ""
authors = [
    {name = "Ygor Vieira"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]

[tool.pytest.ini_options]
# Modo do asyncio
asyncio_mode = "auto"
# Define explicitamente o escopo de loop para fixtures assíncronas
asyncio_default_fixture_loop_scope = "function"
# Opções adicionais para melhor saída
addopts = [
    "--strict-config",
    "--strict-markers",
    "-v",
    "--tb=short",
    "--ignore=docs_src",
]
# Filtra avisos
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]
# Outras configurações
xfail_strict = true
junit_family = "xunit2"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"